--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@fontsource/poppins": "^5.1.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.20",
@@ -24,10 +25,8 @@
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
     "@storybook/addon-essentials": "^8.5.1",
     "@storybook/addon-interactions": "^8.5.1",
-    "@storybook/addon-onboarding": "^8.5.1",
     "@storybook/blocks": "^8.5.1",
     "@storybook/react": "^8.5.1",
     "@storybook/react-vite": "^8.5.1",
