--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-essentials": "^8.5.1",
     "@storybook/addon-interactions": "^8.5.1",
     "@storybook/blocks": "^8.5.1",
+    "@storybook/builder-vite": "^8.5.1",
     "@storybook/react": "^8.5.1",
     "@storybook/react-vite": "^8.5.1",
     "@storybook/test": "^8.5.1",
@@ -43,7 +44,8 @@
     "ts-node": "^10.9.2",
     "typescript": "4.4.4",
     "typewind": "^0.2.0",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
     "dev": "vite --port 5173",
