--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "client-efs-upload-example",
+  "name": "penny-design-system",
   "author": "Dennis_Vash",
   "version": "1.0.0",
   "type": "module",
-  "description": "Example project Client",
+  "description": "Example project design-system implementation",
   "keywords": [
     "typescript",
     "react",
@@ -15,13 +15,9 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.20",
-    "axios": "1.7.9",
     "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "14.3.5",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
@@ -36,14 +32,12 @@
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
-    "class-variance-authority": "^0.7.1",
-    "concurrently": "^9.1.2",
     "cva": "^1.0.0-beta.3",
-    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "storybook": "^8.5.1",
     "ts-node": "^10.9.2",
     "typescript": "4.4.4",
-    "typewind": "^0.2.0",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
